--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "compteurdemotivation",
+  "name": "compteurdelamotivation",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://jeancarriere.github.io/compteurdemotivation/",
+  "homepage": "http://jeancarriere.github.io/compteurdelamotivation/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
