--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build --dest 97576927c1e20c2876d1a6f935a15053c824fe81"
   },
   "eslintConfig": {
     "extends": [
